<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Captain</string>
    <string name="tables_not_available">Tables Not Available</string>

    <string name="by_item_name">By Item Name</string>
    <string name="by_item_group">By Item Group</string>
    <string name="are_you_sure_do_you_want_to_delete_this_entry">Are you sure? Do you want to delete this entry?</string>

    <string name="special_instruction">Special Instruction</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="short_description">Short Description</string>
    <string name="ingradients">Ingredients</string>
    <string name="item_image">Item Image</string>

    <string name="qty">QTY</string>
    <string name="no_charge">No Charge</string>
    <string name="complimentary">Complimentary</string>
    <string name="lbl_void">Void</string>
    <string name="enter_special_instruction_name">Enter Special Instruction Name</string>
    <string name="select_special_instruction">Select Special Instruction</string>

    <string name="printer_not_connected">Printer Not Connected</string>
    <string name="permission_granted_try_print_now">Permission Granted, Try Print Now</string>
    <string name="select_printer_to_print_kots">Select Printer to Print KOTs</string>
    <string name="select_printer_to_print_kot">Select Printer to Print KOT</string>
    <string name="select_printer_to_print_invoice">Select Printer to Print Invoice</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="printer_not_found">Printer not Found</string>

    <string name="select_printer">Select Printer</string>

    <string name="cancel_caps" tools:ignore="ButtonCase">CANCEL</string>
    <string name="ok">OK</string>
    <string name="this_is_mobile_app_you_cant_use_in_tablet">This is mobile app you can\'t use in tablet, Kindly download tablet app from the Play Store</string>

    <string name="download">Download</string>

    <string name="printing_in_progress">Printing in progress…</string>
    <string name="connecting_printer">Connecting printer…</string>
    <string name="printer_is_connected">Printer is connected…</string>
    <string name="printer_is_printing">Printer is printing…</string>
    <string name="printer_has_finished">Printer has finished…</string>


    <string name="failed">Failed</string>
    <string name="the_application_cant_find_any_printer_connected">The application can\'t find any printer connected</string>
    <string name="retry_small_caps">Retry</string>
    <string name="unable_to_connect_the_printer">Unable to connect the printer.</string>
    <string name="it_seems_to_be_an_invalid_syntax_problem">It seems to be an invalid syntax problem.</string>
    <string name="the_selected_encoding_character_returning_an_error">The selected encoding character returning an error.</string>
    <string name="data_send_to_be_converted_to_barcode_or_qr_code_seems_to_be_invalid">Data send to be converted to barcode or QR code seems to be invalid.</string>
    <string name="your_session_is_expire_login_again">Your Session is Expired, Login Again</string>
    <string name="back">Back</string>
    <string name="scanner_error_message">Error While Scanning</string>
    <string name="logout_message">Are you sure from Log out this app.</string>
    <string name="lbl_close_order">Close Order</string>
    <string name="create_invoice_template">Create Invoice Template</string>
    <string name="lbl_kot_caps">KOT</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="regular">Regular</string>
    <string name="cust_details">Customer Details</string>
    <string name="mobile_number">Contact No</string>
    <string name="name">Name</string>
    <string name="pax">Pax</string>
    <string name="address">Address</string>
    <string name="gst_number">GST Number</string>
    <string name="kitchen_category_wise_print">Kitchen Category wise Print</string>
    <string name="for_better_performance_assign_kitchen_ncategory_to_all_menu_item">For Better Performance assign kitchen\\ncategory to all menu item.</string>
    <string name="kitchen_category_section_wise_print">Kitchen Category Section wise Print</string>
    <string name="select_default_printer">Select Default Printer</string>
    <string name="select_print_action">Select Print Action</string>
    <string name="print_kot_on_submit_kot">Print KOT on Submit KOT</string>
    <string name="number_of_copies">No. Of Copies</string>
    <string name="select_kitchen_print_type">Select Kitchen Print Type</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="step_3">Tap the Login Button below\n</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="enter_special_instruction">Enter Special Instruction</string>
    <string name="item_name">Item Name</string>
    <string name="update">Update</string>
    <string-array name="printer_design_type">
        <item>KOT 1</item>
        <item>KOT 2</item>
    </string-array>

    <string-array name="printer_type">
        <item>Direct Print to Default Printer</item>
        <item>Select Printer on Every Print</item>
    </string-array>




    <string name="no_special_instructions">No Special Instructions</string>
    <string name="service_time">Service Time</string>
    <string name="duration">Duration</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_within_service_time">Within Service Time</string>
    <string name="status_beyond_service_time">Beyond Service Time</string>
    <string name="time_minutes_format">%d Min</string>
    <string name="item_quantity_format">x%d</string>
    <string name="close">close</string>
    <string name="continue_text">Continue</string>
</resources>