<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialog_customer_padding"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nunito_semibold"
            android:padding="@dimen/dialog_customer_inner_padding"
            android:text="@string/cust_details"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dialog_customer_title_text_size" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_customer_inner_padding">

            <!-- Name and Pax (Side by Side) -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_ppl"
                style="@style/MyCustomTextInputStyle"
                android:layout_width="@dimen/dialog_customer_pax_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/pax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_ppl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"

                    android:textCursorDrawable="@null"
                    android:theme="@style/textInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_name"
                style="@style/MyCustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toStartOf="@id/ti_ppl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:theme="@style/textInput" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Mobile Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_contact_number"
                style="@style/MyCustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_customer_field_margin_top"
                android:hint="@string/mobile_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:maxLength="10"

                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:theme="@style/textInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- GST Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_gst"
                style="@style/MyCustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_customer_field_margin_top"

                android:cursorVisible="true"
                android:hint="@string/gst_number"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_contact_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_gst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:maxLength="15"

                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:theme="@style/textInput" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Address -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_address"
                style="@style/MyCustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_customer_field_margin_top"
                android:cursorVisible="true"
                android:hint="@string/address"
                android:textCursorDrawable="@null"
                android:visibility="gone"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_gst"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:textColor="@color/colorSecondary"
                    android:theme="@style/textInput" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Buttons -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button_primary_red"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/save"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dialog_customer_button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_address" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_secondary_outline"
                android:fontFamily="@font/nunito_semibold"
                android:stateListAnimator="@null"
                android:text="@string/cancel_caps"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dialog_customer_button_text_size"
                app:layout_constraintBottom_toBottomOf="@id/btn_ok"
                app:layout_constraintEnd_toStartOf="@id/btn_ok"
                app:layout_constraintTop_toTopOf="@id/btn_ok"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="@dimen/_1sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>