<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lin_kot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Printer Settings"
        app:titleTextColor="@color/color_white" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_kitchen_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center_vertical"
        android:text="@string/kitchen_category_wise_print"
        android:textColor="@color/blackText3"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:buttonTint="@color/colorSecondary" />

    <LinearLayout
        android:id="@+id/lin_kitchen_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/for_better_performance_assign_kitchen_ncategory_to_all_menu_item"
            android:textColor="@color/blackText3"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible"
            app:buttonTint="@color/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_kot_kitchen_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:theme="@style/MyCustomTextInputStyle">

            <AutoCompleteTextView
                android:id="@+id/kot_kitchen_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_kitchen_print_type"
                android:inputType="none"
                android:textColorHint="@color/colorSecondaryVariant_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/lin_kit_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/shape_red_border_round"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_kitchen_cat_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="center_vertical"
                android:text="@string/kitchen_category_section_wise_print"
                android:textColor="@color/blackText3"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible"
                app:buttonTint="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/lin_printer_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:orientation="vertical"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/v_dotted_kitchen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"
        android:background="@drawable/shape_dotted_black_line" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_kot_default_printer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:theme="@style/MyCustomTextInputStyle"
        android:visibility="visible">

        <AutoCompleteTextView
            android:id="@+id/kot_default_printer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_default_printer"
            android:inputType="none"
            android:textColorHint="@color/colorSecondaryVariant_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_kot_print_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:theme="@style/MyCustomTextInputStyle"
        android:visibility="visible">

        <AutoCompleteTextView
            android:id="@+id/kot_printer_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_print_action"
            android:inputType="none"
            android:textColorHint="@color/colorSecondaryVariant_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_kot_print_design_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:theme="@style/MyCustomTextInputStyle"
        android:visibility="visible">

        <AutoCompleteTextView
            android:id="@+id/kot_printer_design_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Select KOT Type"
            android:inputType="none"
            android:textColorHint="@color/colorSecondaryVariant_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lin_print_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_kot_print_submission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1.4"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center_vertical"
            android:text="@string/print_kot_on_submit_kot"
            android:textColor="@color/blackText3"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible"
            app:buttonTint="@color/colorSecondary" />

        <RelativeLayout
            android:id="@+id/lin_print_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/number_of_copies"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_1"
                android:orientation="horizontal"
                android:weightSum="1.4">

                <ImageButton
                    android:id="@+id/txt_minus"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/shape_red_border_pink"
                    android:gravity="center"
                    android:textSize="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_minus_white" />

                <EditText
                    android:id="@+id/txt_kot_print"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:digits="1234567890"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:minWidth="@dimen/_50sdp"
                    android:nextFocusDown="@+id/txt_invoice_no"
                    android:text="1"
                    android:theme="@style/textInput" />

                <ImageButton
                    android:id="@+id/txt_plus"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/shape_red_border_pink"
                    android:gravity="center"
                    android:textSize="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_plus_white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/btn_square_shape_cancel"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_square_shape_save"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/save"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</LinearLayout>