<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_back_arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/select_printer"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/_16sdp"
                    app:fontFamily="@font/nunito_semibold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_select_printer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="1dp"
                    android:fontFamily="@font/nunito_regular"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/select_printer_to_print_kot"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/_12sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRestoSessions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/btn_square_shape_cancel"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel_caps"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_square_shape_save"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/ok"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>
